added basic styling

--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="icon" type="image/xcon" href="">
-    <script src="./scripts/script.js"></script>
+    <script src="./scripts/game.js"></script>
     <script src="./scripts/templates.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/fonts.css" />
 
-    <title>Document</title>
+    <title>El pollo loco</title>
 </head>
 <body>
+    <h1>El pollo loco</h1>
+
+    <canvas width="720px" height="480px">
+
+    </canvas>
+
     
 </body>
 </html>
