added graphic to canvas

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
     <title>El pollo loco</title>
 </head>
-<body>
+<body onload="initIndex()">
     <h1>El pollo loco</h1>
 
-    <canvas width="720px" height="480px">
+    <canvas id="canvas" width="720px" height="480px">
 
     </canvas>
 
