--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     
     <link rel="icon" type="image/xcon" href="">
     <script src="./classes/moveable-object.class.js"></script>
+    <script src="./classes/character.class.js"></script>
+    <script src="./classes/chicken.class.js"></script>
+    <script src="./classes/world.class.js"></script>
     <script src="./scripts/game.js"></script>
     <script src="./scripts/templates.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
