--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./classes/character.class.js"></script>
     <script src="./classes/chicken.class.js"></script>
     <script src="./classes/world.class.js"></script>
+    <script src="./classes/cloud.class.js"></script>
     <script src="./scripts/game.js"></script>
     <script src="./scripts/templates.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
