--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="./classes/chicken.class.js"></script>
     <script src="./classes/world.class.js"></script>
     <script src="./classes/cloud.class.js"></script>
+    <script src="./classes/background-object.class.js"></script>
+
     <script src="./scripts/game.js"></script>
     <script src="./scripts/templates.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
