--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="./classes/world.class.js"></script>
     <script src="./classes/cloud.class.js"></script>
     <script src="./classes/background-object.class.js"></script>
+    <script src="./classes/keyboard.class.js"></script>
 
     <script src="./scripts/game.js"></script>
     <script src="./scripts/templates.js"></script>
