--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <script src="./classes/moveable-object.class.js"></script>
     <script src="./classes/character.class.js"></script>
     <script src="./classes/chicken.class.js"></script>
-    <script src="./classes/world.class.js"></script>
     <script src="./classes/cloud.class.js"></script>
     <script src="./classes/background-object.class.js"></script>
     <script src="./classes/keyboard.class.js"></script>
+    <script src="./classes/world.class.js"></script>
+    <script src="./classes/level.class.js"></script>
 
+    <script src="./scripts/levels/level1.js"></script>
     <script src="./scripts/game.js"></script>
     <script src="./scripts/templates.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
