--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./classes/keyboard.class.js"></script>
     <script src="./classes/world.class.js"></script>
     <script src="./classes/level.class.js"></script>
+    <script src="./classes/endboss.class.js"></script>
 
     <script src="./scripts/levels/level1.js"></script>
     <script src="./scripts/game.js"></script>
