--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <link rel="icon" type="image/xcon" href="">
+    <script src="./classes/drawable-object.class.js"></script>
     <script src="./classes/moveable-object.class.js"></script>
     <script src="./classes/character.class.js"></script>
     <script src="./classes/chicken.class.js"></script>
@@ -14,6 +15,7 @@
     <script src="./classes/world.class.js"></script>
     <script src="./classes/level.class.js"></script>
     <script src="./classes/endboss.class.js"></script>
+    <script src="./classes/status-bar.class.js"></script>
 
     <script src="./scripts/levels/level1.js"></script>
     <script src="./scripts/game.js"></script>
