--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="./classes/keyboard.class.js"></script>
     <script src="./classes/world.class.js"></script>
     <script src="./classes/level.class.js"></script>
+    <script src="./classes/throwable-object.class.js"></script>
     <script src="./classes/endboss.class.js"></script>
 
     <script src="./scripts/levels/level1.js"></script>
