--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="icon" type="image/xcon" href="">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" type="image/xcon" href="" />
     <script src="./classes/drawable-object.class.js"></script>
     <script src="./classes/status-bar.class.js"></script>
     <script src="./classes/moveable-object.class.js"></script>
@@ -25,14 +25,11 @@
     <link rel="stylesheet" href="./styles/fonts.css" />
 
     <title>El pollo loco</title>
-</head>
-<body onload="initIndex()">
-    <h1>El pollo loco</h1>
-
-    <canvas id="canvas" width="720px" height="480px">
-
-    </canvas>
-
-    
-</body>
+  </head>
+  <body onload="initIndex()">
+    <div id="fullscreen">
+      <h1>El pollo loco</h1>
+      <canvas id="canvas" width="720px" height="480px"> </canvas>
+    </div>
+  </body>
 </html>
