--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script src="./classes/moveable-object.class.js"></script>
     <script src="./classes/character.class.js"></script>
     <script src="./classes/chicken.class.js"></script>
-    <script src="./classes/coins.class.js"></script>
+    <script src="./classes/coin.class.js"></script>
+    <script src="./classes/bottle.class.js"></script>
     <script src="./classes/cloud.class.js"></script>
     <script src="./classes/background-object.class.js"></script>
     <script src="./classes/keyboard.class.js"></script>
