--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="./classes/moveable-object.class.js"></script>
     <script src="./classes/character.class.js"></script>
     <script src="./classes/chicken.class.js"></script>
+    <script src="./classes/chicken-small.class.js"></script>
     <script src="./classes/coin.class.js"></script>
     <script src="./classes/bottle.class.js"></script>
     <script src="./classes/cloud.class.js"></script>
