renamed collsion data name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="./classes/background-object.class.js"></script>
     <script src="./classes/keyboard.class.js"></script>
     <script src="./classes/world.class.js"></script>
-    <script src="./classes/collisions.class.js"></script>
+    <script src="./classes/collision.class.js"></script>
     <script src="./classes/level.class.js"></script>
     <script src="./classes/throwable-object.class.js"></script>
     <script src="./classes/endboss.class.js"></script>
