--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
       <h1>El pollo loco</h1>
       <canvas id="canvas" width="720px" height="480px"> </canvas>
     </div>
+    <button style="height: 50px; width: 50px;" onclick="stopGame()">Pause</button>
   </body>
 </html>
