Display win screen after defeating Endboss

--- a/index.html
+++ b/index.html
@@ -44,7 +44,12 @@
       </div>
 
       <canvas id="canvas" width="720px" height="480px" class="canvasScreen"> </canvas>
-      <div id="end-screen" class="endscreen">
+
+      <div id="end-screen" class="endScreen">
+        <button onclick="restartGame()" class="btn btnEndscreen">Restart Game</button>
+      </div>
+
+      <div id="won-screen" class="wonScreen">
         <button onclick="restartGame()" class="btn btnEndscreen">Restart Game</button>
       </div>
     </div>
