style.css code cleanup

--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
       <canvas id="canvas" width="720px" height="480px" class="canvasScreen"> </canvas>
 
-      <div id="end-screen" class="endScreen">
+      <div id="end-screen" class="endScreen gameOverImg">
         <button onclick="restartGame()" class="btn btnEndscreen">Restart Game</button>
       </div>
 
-      <div id="won-screen" class="wonScreen">
+      <div id="won-screen" class="endScreen youWinImg">
         <button onclick="restartGame()" class="btn btnEndscreen">Restart Game</button>
       </div>
     </div>
