Added "Stop" button to canvas

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         ></canvas>
 
         <!-- Button über dem Canvas -->
-        <button class="btn" style="position: absolute; top: 20px; left: 20px">
-          Test
+        <button onclick="stopGame()" class="btnCanvas btnCanvasStop">
+         II
         </button>
       </div>
 
@@ -72,12 +72,5 @@
         </button>
       </div>
     </div>
-    <button
-      id="stop-button"
-      style="height: 50px; width: 50px"
-      onclick="stopGame()"
-    >
-      Pause
-    </button>
   </body>
 </html>
