Fix: use B instead of SPACE for throwing bottles (canvas click conflict)

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="key-description">
           <p>A & D = Walk</p>
           <p>W = Jump</p>
-          <p>Space = Throw bottles</p>
+          <p>B = Throw bottles</p>
         </div>
       </div>
 
