--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" type="image/xcon" href="" />
+    <link rel="icon" type="image/xcon" href="./assets/icons/J-35.png" />
     <script src="./classes/drawable-object.class.js"></script>
     <script src="./classes/status-bar.class.js"></script>
     <script src="./classes/moveable-object.class.js"></script>
