--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="./classes/endboss.class.js"></script>
 
     <script src="./scripts/game.js"></script>
+    <script src="./scripts/audio.js"></script>
     <script src="./scripts/levels/level1.js"></script>
     <script src="./scripts/templates.js"></script>
     <link rel="stylesheet" href="./styles/style.css" />
@@ -39,6 +40,7 @@
           Start Game
           <img src="./assets/icons/play.png" alt="Play icon">
         </button>
+        <button onclick="playHomeAudio()">Mute off</button>
         <div class="key-description">
           <p>A & D = Walk</p>
           <p>W = Jump</p>
