Added mute button to canvas

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           onclick="stopGame()"
           class="btnCanvas btnCanvasStop"
         ></button>
+        <button id="touchBtnMute" class="btnCanvas btnCanvasMute" onclick="switchMute()"></button>
         <button id="touchBtnLeft" class="btnCanvas btnCanvasLeft"></button>
         <button id="touchBtnRight" class="btnCanvas btnCanvasRight"></button>
         <button id="touchBtnUp" class="btnCanvas btnCanvasUp"></button>
