Update mute button icon toggle on start screen

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           Start Game
           <img src="./assets/icons/play.png" alt="Play icon">
         </button>
-        <button onclick=" playHomeAudio(); switchMute(); ">Mute off</button>
+        <button id="start-button-mute" class="btn btnStartMute" onclick=" playHomeAudio(); switchMute(); "></button>
         <div class="key-description">
           <p>A & D = Walk</p>
           <p>W = Jump</p>
