--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 
     <title>El pollo loco</title>
   </head>
-  <body onload="">
+  <body onload="toggleVideo()">
+    <div id="rotateHint" class="rotateHint">
+      Bitte drehen Sie Ihr Gerät ins Querformat 📱↔️
+    </div>
     <div id="fullscreen">
       <h1>El pollo loco</h1>
 
