Display rotation info if device is in portrait mode

--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
   </head>
   <body onload="toggleVideo()">
     <div id="rotateHint" class="rotateHint">
-      Bitte drehen Sie Ihr Gerät ins Querformat 📱↔️
+      <p>
+        Please rotate your phone<br /><img
+          class="rotateIcon"
+          src="./assets/icons/mobile_rotate.png"
+          alt="Phone rotation icon"
+        />
+      </p>
     </div>
     <div id="fullscreen">
       <h1>El pollo loco</h1>
