renamend rotation hint function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <title>El pollo loco</title>
   </head>
-  <body onload="toggleVideo()">
+  <body onload="toggleRotationHint()">
     <div id="rotateHint" class="rotateHint">
       <p>
         Please rotate your phone<br /><img
