renamed initIndex() to startGame()

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h1>El pollo loco</h1>
 
       <div id="start-screen" class="startScreen">
-        <button onclick="initIndex()" id="start-button" class="btn btnStart">
+        <button onclick="startGame()" id="start-button" class="btn btnStart">
           Start Game
           <img src="./assets/icons/play.png" alt="Play icon" />
         </button>
