--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="./classes/bottle.class.js"></script>
     <script src="./classes/cloud.class.js"></script>
     <script src="./classes/background-object.class.js"></script>
+    <script src="./classes/hint.class.js"></script>
     <script src="./classes/keyboard.class.js"></script>
     <script src="./classes/collision.class.js"></script>
     <script src="./classes/world.class.js"></script>
