Audio fix, after game over and game win

--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
           Restart Game
           <img src="./assets/icons/renew.png" alt="Restart icon" />
         </button>
+        <button onclick="backToHome()" class="btn btnEndscreen">
+          Home
+          <img src="./assets/icons/renew.png" alt="Restart icon" />
+        </button>
       </div>
 
       <div id="won-screen" class="endScreen youWinImg">
