Added "back to home" button for en and win screen

--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
           Restart Game
           <img src="./assets/icons/renew.png" alt="Restart icon" />
         </button>
-        <button onclick="backToHome()" class="btn btnEndscreen">
+        <button onclick="backToHome()" class="btn btnEndscreen btnHome">
           Home
-          <img src="./assets/icons/renew.png" alt="Restart icon" />
+          <img src="./assets/icons/home.png" alt="Restart icon" />
         </button>
       </div>
 
@@ -101,6 +101,10 @@
         <button onclick="restartGame()" class="btn btnEndscreen">
           Restart Game
           <img src="./assets/icons/renew.png" alt="Restart icon" />
+        </button>
+        <button onclick="backToHome()" class="btn btnEndscreen btnHome">
+          Home
+          <img src="./assets/icons/home.png" alt="Restart icon" />
         </button>
       </div>
     </div>
