--- a/index.html
+++ b/index.html
@@ -59,6 +59,23 @@
           <p>W = Jump</p>
           <p>B = Throw bottles</p>
         </div>
+        <button onclick="openImpressum()" id="impressum-button" class="btn btnStart btnImpressum">
+          Impressum
+        </button>
+      </div>
+      <div id="impressum" class="impressum">
+        <button onclick="leaveImpressum()" class="btn btnBack">
+          Back to Home
+          <img src="./assets/icons/home.png" alt="Restart icon" />
+        </button>
+        <div>
+          <h1>Impressum</h1>
+          <p>Christian MÜller</p>
+          <p>Manheimer Ring 32</p>
+          <p>50170 Kerpen</p>
+          <p>Telefon: 01747879021</p>
+          <p>E-mail: christianmueller8@gmx.net</p>
+        </div>
       </div>
 
       <!-- Wrapper für Canvas + Buttons -->
