style.css code cleanup + changed mobile buttons

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
           class="btnCanvas btnCanvasMute"
           onclick="switchMute()"
         ></button>
+      
+      </div>
+      <div>
         <button id="touchBtnLeft" class="btnCanvas btnCanvasLeft"></button>
         <button id="touchBtnRight" class="btnCanvas btnCanvasRight"></button>
         <button id="touchBtnUp" class="btnCanvas btnCanvasUp"></button>
