--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         ></button>
       
       </div>
-      <div>
+      <div id="mobile-buttons" class="mobileButtons">
         <button id="touchBtnLeft" class="btnCanvas btnCanvasLeft"></button>
         <button id="touchBtnRight" class="btnCanvas btnCanvasRight"></button>
         <button id="touchBtnUp" class="btnCanvas btnCanvasUp"></button>
