Fix: Mute and pause buttons don’t disappear on PC version

--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
       
       </div>
       <div id="mobile-buttons" class="mobileButtons">
-        <button id="touchBtnLeft" class="btnCanvas btnCanvasLeft"></button>
-        <button id="touchBtnRight" class="btnCanvas btnCanvasRight"></button>
-        <button id="touchBtnUp" class="btnCanvas btnCanvasUp"></button>
-        <button id="touchBtnThrow" class="btnCanvas btnCanvasThrow"></button>
+        <button id="touchBtnLeft" class="btnCanvasMobile btnCanvasLeft"></button>
+        <button id="touchBtnRight" class="btnCanvasMobile btnCanvasRight"></button>
+        <button id="touchBtnUp" class="btnCanvasMobile btnCanvasUp"></button>
+        <button id="touchBtnThrow" class="btnCanvasMobile btnCanvasThrow"></button>
       </div>
 
       <div id="end-screen" class="endScreen gameOverImg">
