UI design updates

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           Back to Home
           <img src="./assets/icons/home.png" alt="Restart icon" />
         </button>
-        <div>
+        <div class="impressumContent">
           <h1>Impressum</h1>
           <p>Christian MÜller</p>
           <p>Manheimer Ring 32</p>
