test fullscreen in mobile

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
       
       </div>
       <div id="mobile-buttons" class="mobileButtons">
+        <button onclick="getFullScreen()" id="touchBtnFullscreen" class="btnCanvasMobile btnCanvasFullscreen"></button>
         <button id="touchBtnLeft" class="btnCanvasMobile btnCanvasLeft"></button>
         <button id="touchBtnRight" class="btnCanvasMobile btnCanvasRight"></button>
         <button id="touchBtnUp" class="btnCanvasMobile btnCanvasUp"></button>
